--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  </head>
   <body>
-    <h1>Dragon Stack</h1>
     <div id="root"></div>
     <script src="index.js"></script>
   </body>
