--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
